fixing footer text align

--- a/styles/style.css
+++ b/styles/style.css
@@ -297,6 +297,7 @@ form button{
 .footer-title{
     font-size: 1rem;
     font-weight: 600;
+    text-align: center;
 }
 /* footer end */
 
